# minerva

backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2024-03-31_add_user_and_access_token.py
backend/minerva/: main.py  utils.py
backend/minerva/access_token/: dependencies.py  exceptions.py  models.py  repository.py  service.py  utils.py
backend/minerva/core/: config.py  exceptions.py  lifespan.py  schemas.py
backend/minerva/core/db/: __init__.py  dependencies.py  engine.py  main.py  mixins.py
backend/minerva/core/middleware/: authentication.py
backend/minerva/core/repository/: base.py  exceptions.py  sqlalchemy.py
backend/minerva/core/service/: __init__.py  base.py  exceptions.py
backend/minerva/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/tests/: _database.py  _factories.py  _utils.py  conftest.py  test_core_repository_sqlalchemy.py  test_core_service_sqlalchemy.py  test_main.py  test_users_repository.py  test_users_router.py  test_users_schemas.py  test_users_service.py
